# sm_ipc

./: CMakeLists.txt  main.cpp
include/: sk_os.h  sk_std_defs.h  sk_tbx.h  smmsg.h
include/sm/: smallwin.h  smglobal.h  smmsg.h  smsetup.h  smstruct.h  smtype.h
src/sk_os/: CMakeLists.txt  priv_mac.h  sk_tbx.c  skyapi_event.c  skyapi_mem.c  skyapi_mutex.c  skyapi_os.c  skyapi_que.c  skyapi_sem.c  skyapi_task.c  skyapi_time.c
src/sk_sm/: CMakeLists.txt  smglobal.c  smmsg.c  smscheduler.c  smtick.c
